# pkgwhy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci-templates.md  commercial-agent-platform.md  dynamic-sandbox.md  json-schema-compatibility.md  production-readiness.md  release-candidate-surface.md  release-checklist.md  static-rule-corpus.md  threat-model.md  versioning-policy.md
examples/github-actions/: pkgwhy-package-gate.yml
scripts/: check_public_traces.py
src/pkgwhy/: __init__.py  __main__.py  cli.py  pip_gate.py  precheck.py
src/pkgwhy/agent/: __init__.py  judge.py
src/pkgwhy/core/: __init__.py  constants.py  decision_contract.py  models.py
src/pkgwhy/dependencies/: __init__.py  graph.py  reason.py
src/pkgwhy/dynamic/: __init__.py  analysis.py
src/pkgwhy/explanations/: __init__.py  explain.py  local_db.py
src/pkgwhy/imports/: __init__.py  scanner.py
src/pkgwhy/inspection/: __init__.py  files.py  python_static.py  size.py  text_patterns.py
src/pkgwhy/manifests/: __init__.py  lockfiles.py  pyproject.py  requirements.py
src/pkgwhy/metadata/: __init__.py  installed.py  pypi.py
src/pkgwhy/policy/: __init__.py  agent_policy.py  audit_log.py  (+1 more)
tests/: test_agent_check.py  test_agent_policy.py  test_audit_log.py  test_ci_templates.py  test_cli.py  test_commercial_design_docs.py  test_dependency_graph.py  test_dynamic.py  test_explanations.py  test_file_static_analysis.py  test_import_scanner.py  test_json_snapshots.py  test_manifests.py  test_pip_gate.py  test_precheck.py  test_provenance.py  test_publish.py  test_python_static.py  test_registry.py  test_reports.py  test_risk.py  test_risk_rules.py  test_runner.py  test_size.py  test_static_rule_corpus.py  test_tool_judgement.py  test_tool_manifest.py  test_tool_policy.py  test_tool_validate.py  test_typosquat.py  test_vulnerabilities.py
(+34 files in other folders)
