[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pkgwhy"
version = "0.2.0a0"
description = "Offline-first Python package intelligence and local private-tool execution with conservative static inspection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Luke Gerakiteys" }
]
maintainers = [
  { name = "Luke Gerakiteys" }
]
keywords = ["python", "packages", "security", "cli", "dependencies", "static-analysis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "packaging>=24.0",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=5.1",
]

[project.scripts]
pkgwhy = "pkgwhy.cli:app"

[project.urls]
Homepage = "https://github.com/devlukeg/pkgwhy"
Repository = "https://github.com/devlukeg/pkgwhy"
Issues = "https://github.com/devlukeg/pkgwhy/issues"
Changelog = "https://github.com/devlukeg/pkgwhy/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pkgwhy"]

[tool.hatch.build.targets.sdist]
include = [
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "README.md",
  "SECURITY.md",
  "pyproject.toml",
  "src/**",
  "tests/**",
]
